# gpu-domain-propagator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
fileReader/: GPUDomPropInterface.py  HighPrecisionResult.txt  analyze_progress.py  analyze_roofline.py  exec_file.sh  exec_python_unittests.sh  exec_tests.sh  numerics.csv  output.txt  papiloInterface.py  papilo_jenkins.py  papilo_params.txt  readerInterface.py  regexes.py  requirements.txt  run_propagation.py  run_propagation_orig.py  run_propagtion.py  test_reader.py  trial_julia.sh  utils.py
fileReader/plotter/: plot.py  plot_config.json  plot_results.py
fileReader/sequential_propagator_Julia_MultiFloats/: Definitions.jl  Miscellaneous.jl  PropagationMethods.jl  SequentialPropagator.jl  TestCase.jl
fileReader/sequential_propagator_julia_BigFloat/: Definitions.jl  Miscellaneous.jl  PropagationMethods.jl  SequentialPropagator.jl  TestCase.jl  output.txt
fileReader/sequential_propagator_julia_MultiFloats/: Definitions.jl  Miscellaneous.jl  PropagationMethods.jl  SequentialPropagator.jl  TestCase.jl  output.txt
include/: interface.h
src/: GPU_interface.cuh  commons.cuh  cuda_def.cuh  def.h  interface.cu  main.cpp  misc.cpp  misc.h  params.h  propagation_methods.cpp  propagation_methods.cu  propagation_methods.cuh  propagation_methods.h
src/kernels/: atomic_kernel.cuh  atomic_megakernel.cuh  bound_reduction_kernel.cuh  csr_data.cpp  csr_data.h  util_kernels.cu  util_kernels.cuh
src/progressMeasureMethods/: preprocessor.h  progressPropagators.cuh  progress_function.h  weakest_bounds.h
src/propagators/: GPU_propagator.cuh  OMP_propagator.h  preprocessor.h  sequential_propagator.h
test/: test_infra.cu  test_infra.cuh  test_main.cu  test_setups.cuh  tester.cuh
test/testCases/: test_components.cuh  test_end_to_end.cuh  test_performance.cuh  test_propagator.cuh  test_weakest_bounds.cuh
